# rust-ifaces

./: Cargo.toml  LICENSE  README.md  README.rst
examples/: ifaces.rs
src/: ffi.rs  interface.rs  lib.rs
src/ffi/: mod.rs
src/ffi/unix/: mod.rs
src/ffi/windows/: mod.rs
src/sys/: mod.rs
src/sys/unix/: ffi.rs  interface.rs  mod.rs
src/sys/windows/: ffi.rs  mod.rs
