[package]
name = "ifaces"
version = "0.0.3"
description = "Rust bindings to retrieve network interface information"
authors = [
    "David Levy <dlevy47>",
    "Steve Klabnik <steve@steveklabnik.com>",
    "misuzu <bakalolka@gmail.com>",
    "Ignacio Corderi <icorderi@msn.com>"
]
keywords = ["ifaces", "unix", "network"]
repository = "https://github.com/icorderi/rust-ifaces"
homepage = "https://github.com/icorderi/rust-ifaces"
readme = "README.md"
license = "MIT"

[dependencies]
libc = "0.2.8"

[target.'cfg(not(windows))'.dependencies]
nix = "0.5.0"

[target.'cfg(windows)'.dependencies]
bitflags = "0.7.0"
winapi = "0.2.8"